RESOLVED FIXED295401
www.ricoh-imaging.co.jp: REGRESSION (293848@main): Images does not come into view while scrolling on product page
https://bugs.webkit.org/show_bug.cgi?id=295401
Summary www.ricoh-imaging.co.jp: REGRESSION (293848@main): Images does not come into ...
Antti Koivisto
Reported 2025-07-03 05:59:14 PDT
Steps To Reproduce: 1. Go to https://www.ricoh-imaging.co.jp/english/products/gr-3/ 2. Scroll to see that sample images appear but it is large background for stretch of time
Attachments
Antti Koivisto
Comment 1 2025-07-03 05:59:29 PDT
Antti Koivisto
Comment 2 2025-07-03 06:06:22 PDT
EWS
Comment 3 2025-07-03 08:51:11 PDT
Committed 296973@main (ff8c5f9cb0ab): <https://commits.webkit.org/296973@main> Reviewed commits have been landed. Closing PR #47549 and removing active labels.
Brianna Fan
Comment 4 2025-07-07 10:24:47 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/53629
Tim Nguyen (:ntim)
Comment 5 2025-07-07 11:02:25 PDT
Note You need to log in before you can comment on or make changes to this bug.