www.ricoh-imaging.co.jp: REGRESSION (293848@main): Images does not come into view while scrolling on product page https://bugs.webkit.org/show_bug.cgi?id=295401 rdar://154838379

Reviewed by Simon Fraser.

The inline style mutation optimization relies on the style builder overwriting a property in RenderStyle fully
without having to start from the initial value. In case of animation-name mutation we failed to clear m_isNone state
if it had been previously set and the animation wouldn't run.

* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/animation-name-inline-style-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/animation-name-inline-style.html: Added.
* Source/WebCore/css/CSSToStyleMap.cpp:
(WebCore::CSSToStyleMap::mapAnimationName):
* Source/WebCore/platform/animation/Animation.cpp:
(WebCore::Animation::Animation):
(WebCore::Animation::animationsMatch const):
* Source/WebCore/platform/animation/Animation.h:
(WebCore::Animation::isEmpty const):
(WebCore::Animation::isNoneAnimation const): Deleted.

Get rid of the separate isNone state and instead just set the name to the initial value (which is "none").

(WebCore::Animation::isValidAnimation const): Deleted.

The only call site for this already tested for "none" and empty name explicitly.

(WebCore::Animation::setIsNoneAnimation): Deleted.
* Source/WebCore/style/Styleable.cpp:
(WebCore::Styleable::updateCSSAnimations const):

Canonical link: https://commits.webkit.org/296973@main